--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -20,7 +20,8 @@ steps:
     npm run build
   displayName: 'npm install and build'
 
-- task: PublishBuildArtifacts@1    
-  displayName: 'Publish Artifact: drop'
+- task: PublishPipelineArtifact@0
+  displayName: 'Publish pipeline artifact'
   inputs:
-    PathtoPublish: '$(build.artifactstagingdirectory)'
+    artifactName: 'drop'
+    targetPath: '$(Build.ArtifactStagingDirectory)'
